# PrivacyPilot

./: .gitignore  .gitmodules  README.md  pypi_release.ps1  pyproject.toml  test_api.py  test_pypi_release.ps1
configs/: local_rag.json
doc/: roadmap.md
plugins/local_rag/: __init__.py  config.py  document_processor.py  file_collector.py  local_rag.py  query_service.py  utils.py
plugins/local_rag/document/: __init__.py  document.py  document_type.py
plugins/local_rag/document_loader/: __init__.py  config.py  document_loader.py
plugins/local_rag/document_parser/: __init__.py  config.py  document_parser.py
plugins/local_rag/embedder/: __init__.py  config.py  embedder.py
plugins/local_rag/reranker/: __init__.py  config.py  reranker.py
plugins/local_rag/vector_index/: __init__.py  config.py  vector_index.py
ppilot/: __init__.py  certificate_utils.py  cpu.py  disk.py  file_finder.py  local_rag.py  python_interpreter.py  serve.py  slides_gen_utils.py
ppilot/aihub-slides-gen/: .gitignore  .pre-commit-config.yaml  card.py  colour.py  environment.yml  funnel.py  main.py  md2pptx.py  pyproject.toml  rectangle.py  runPython.py  run_pyto.py  server_api.py  symbols.py  test_api.py
ppilot/aihub-slides-gen/chromium/: index.html
ppilot/aihub-slides-gen/prompts/: aihub.txt  gpt4.txt
ppilot/aihub-slides-gen/script_test/: md2pptx_hardcode.py  setup.txt  test_api2.py
tests/test_data/: M3-Embedding -- Multi-Linguality, Multi-Functionality, Multi-Granularity Text Embeddings Through Self-Knowledge Distillation.txt  team meeting - game part.txt
(+12 files in other folders)
